classDiagram
    %% ========== 用户管理模块 ==========
    namespace 用户管理 {
        class User {
            +Long id
            +String userNo
            +String name
            +String phone
            +login() bool
            +register() void
        }
        
        class StaffAccount {
            +Long id
            +String username
            +String displayName
            +Integer status
            +login() bool
        }
        
        class StaffRoleRel {
            +Long id
            +Long staffId
            +Long roleId
        }
    }

    %% ========== 预约管理模块 ==========
    namespace 预约管理 {
        class Appointment {
            +Long id
            +String appointmentNo
            +Long userId
            +Long packageId
            +LocalDate appointDate
            +Integer status
            +create() void
            +cancel() void
        }
        
        class ExamPackage {
            +Long id
            +String packageCode
            +String packageName
            +BigDecimal price
            +getList() List
        }
        
        class ExamPackageItem {
            +Long id
            +Long packageId
            +String itemCode
            +String itemName
        }
        
        class ResourceCapacity {
            +Long id
            +String centerCode
            +Integer capacityTotal
            +Integer capacityUsed
        }
    }

    %% ========== 订单管理模块 ==========
    namespace 订单管理 {
        class Order {
            +Long id
            +String orderNo
            +Long userId
            +BigDecimal totalAmount
            +Integer status
            +create() void
            +pay() void
        }
        
        class OrderItem {
            +Long id
            +Long orderId
            +Integer qty
            +BigDecimal amount
        }
        
        class PaymentRecord {
            +Long id
            +Long orderId
            +BigDecimal amount
            +String payChannel
        }
    }

    %% ========== 体检执行模块 ==========
    namespace 体检执行 {
        class ExamTask {
            +Long id
            +String taskNo
            +Long appointmentId
            +Long userId
            +Integer taskStatus
            +generate() void
        }
        
        class ExamTaskItem {
            +Long id
            +Long taskId
            +String itemCode
            +Long doctorId
            +Integer itemStatus
            +complete() void
        }
        
        class ExamResult {
            +Long id
            +Long taskItemId
            +String resultValue
            +Integer isAbnormal
            +Long entryDoctorId
            +create() void
        }
    }

    %% ========== 报告管理模块 ==========
    namespace 报告管理 {
        class ExamReport {
            +Long id
            +String reportNo
            +Long taskId
            +Long userId
            +Integer status
            +generate() void
            +publish() void
        }
        
        class ExamReportItem {
            +Long id
            +Long reportId
            +Long resultId
            +String resultValue
        }
        
        class DoctorReviewRecord {
            +Long id
            +Long reportId
            +Long doctorId
            +Integer reviewStatus
        }
    }

    %% ========== 咨询管理模块 ==========
    namespace 咨询管理 {
        class DoctorConsultation {
            +Long id
            +String consultationNo
            +Long userId
            +Long doctorId
            +Long reportId
            +Integer status
            +create() void
            +assign() void
        }
        
        class DoctorConsultationReply {
            +Long id
            +Long consultationId
            +String replyContent
        }
    }

    %% ========== 数据分析模块 ==========
    namespace 数据分析 {
        class ReportCompareTask {
            +Long id
            +String taskNo
            +Long userId
            +Long baselineReportId
            +Long compareReportId
            +create() void
        }
        
        class HealthRiskScore {
            +Long id
            +Long taskId
            +BigDecimal scoreTotal
            +Integer riskLevel
        }
        
        class HealthAdviceRecord {
            +Long id
            +Long userId
            +Long reportId
            +String adviceContent
        }
    }

    %% ========== 模块内关系 ==========
    User "1" -- "0..*" StaffAccount : 关联
    StaffAccount "1" *-- "0..*" StaffRoleRel : 组合
    
    ExamPackage "1" *-- "0..*" ExamPackageItem : 组合
    Order "1" *-- "0..*" OrderItem : 组合
    ExamTask "1" *-- "0..*" ExamTaskItem : 组合
    ExamReport "1" *-- "0..*" ExamReportItem : 组合
    DoctorConsultation "1" *-- "0..*" DoctorConsultationReply : 组合
    ReportCompareTask "1" *-- "0..1" HealthRiskScore : 关联

    %% ========== 跨模块关系 ==========
    User "1" -- "0..*" Appointment : 创建预约
    User "1" -- "0..*" Order : 创建订单
    User "1" -- "0..*" DoctorConsultation : 发起咨询
    
    Appointment "*" -- "1" ExamPackage : 选择套餐
    Appointment "*" -- "1" ResourceCapacity : 占用时段
    Appointment "0..1" -- "1" Order : 生成订单
    Appointment "0..1" -- "1" ExamTask : 生成体检任务
    
    Order "1" -- "0..*" PaymentRecord : 支付记录
    
    ExamTaskItem "1" -- "0..*" ExamResult : 录入结果
    ExamResult "*" -- "1" ExamReportItem : 关联报告项
    ExamTask "0..1" -- "1" ExamReport : 生成报告
    
    ExamReport "1" -- "0..*" DoctorReviewRecord : 审核记录
    ExamReport "1" -- "0..*" ExamReportItem : 报告明细
    
    DoctorConsultation "*" -- "0..1" ExamReport : 关联报告
    
    ReportCompareTask "*" -- "1" ExamReport : 基线报告
    ReportCompareTask "*" -- "1" ExamReport : 对比报告
    ReportCompareTask "1" -- "0..*" HealthAdviceRecord : 健康建议
    
    StaffAccount "1" -- "0..*" ExamResult : 医生录入
    StaffAccount "1" -- "0..*" DoctorReviewRecord : 医生审核
    StaffAccount "1" -- "0..*" DoctorConsultation : 医生回复
